[package]
name = "mitm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#https://deterministic.space/high-performance-rust.html
[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'

[dependencies]
