[package]
name = "mitm-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#https://deterministic.space/high-performance-rust.html
[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'

[[example]]
name = "net"
path = "src/main.rs"

[[example]]
name = "tokio"
path = "src/tokio.rs"

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
